# plex-course-renamer

./: .gitignore  LICENSE  README.md  pyproject.toml
plex_course_renamer/: rename.py
tests/: test_plex_course_renamer.py
