[tool.poetry]
name = "plex-course-renamer"
version = "0.1.0"
description = ""
authors = ["Eric Warren <ericwarren99@hotmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
